--- a/Portfolio-Me.css
+++ b/Portfolio-Me.css
@@ -16,7 +16,7 @@ body{
   margin: auto;
   width: 100%;
   display: inline-block;
-  text-align: right;
+  text-align: center;
 }
 
 li {
@@ -31,7 +31,7 @@ li {
   font-size: 15pt;
   letter-spacing: 0.1em;
   list-style-type: none;
-  margin: auto 90px;
+  margin: auto 120px;
   text-decoration: none;
 }
 
