--- a/Portfolio.css
+++ b/Portfolio.css
@@ -1,64 +1,26 @@
-* {
-  margin:0;
-  padding:0;
-}
+/**
+ * @license
+ * MyFonts Webfont Build ID 3876320, 2020-03-04T10:39:18-0500
+ * 
+ * The fonts listed in this notice are subject to the End User License
+ * Agreement(s) entered into by the website owner. All other parties are 
+ * explicitly restricted from using the Licensed Webfonts(s).
+ * 
+ * You may obtain a valid license at the URLs below.
+ * 
+ * Webfont: AvenirLTPro-Light by Linotype
+ * URL: https://www.myfonts.com/fonts/linotype/avenir/pro-35-light/
+ * Copyright: Copyright &#x00A9; 2014 Monotype GmbH. All rights reserved.
+ * 
+ * 
+ * 
+ * © 2020 MyFonts Inc
+*/
 
-h1{
-font-size: 200pt;
-color:white;
-letter-spacing: 0.02em;
-margin-top: 5%;
 
-}
+/* @import must be at top of file, otherwise CSS will not work */
+@import url("//hello.myfonts.net/count/3b25e0");
 
-#isabelle{
-  text-align: left;
-  margin-top: 130px;
-  margin-left: 3%;
-  margin-bottom: 0px;
-  padding: 0px;
-}
-
-#rieken{
-  text-align: right;
-  margin-right: 3%;
-  margin-top: 0px;
-  padding: 0px;
-}
-
-body{
-  background-color: #D5CEC3;
-}
-
-.navbar{
-  margin-top: 22px;
-  /* display: inline-block; */
-}
-
-.nav{
-  margin: auto;
-  width: 100%;
-  display: inline-block;
-  text-align: right;
-}
-
-li {
-  display: inline;
-}
-
-.navitem{
-  color: #191919;
-  text-align: center;
-  font-family: sofia-pro, sans-serif;
-  font-weight: 300;
-  font-size: 15pt;
-  letter-spacing: 0.1em;
-  list-style-type: none;
-  margin: auto 90px;
-  text-decoration: none;
-}
-
-.navitem:hover{
-  color: #E54225;
-  font-style: italic;
-}
+  
+@font-face {font-family: 'AvenirLTPro-Light';src: url('webfonts/3B25E0_0_0.eot');src: url('webfonts/3B25E0_0_0.eot?#iefix') format('embedded-opentype'),url('webfonts/3B25E0_0_0.woff2') format('woff2'),url('webfonts/3B25E0_0_0.woff') format('woff'),url('webfonts/3B25E0_0_0.ttf') format('truetype');}
+ 
