--- a/Portfolio-Me.css
+++ b/Portfolio-Me.css
@@ -7,6 +7,30 @@ body{
   background-color: #a4c978;
 }
 
+.about{
+  font-size: 40pt;
+  color: #f2f2f2;
+  font-family: AvenirLTPro-Light;
+  font-weight: normal;
+  font-style: normal;
+  /* font-family: sofia-pro, sans-serif;
+  font-weight: 200;
+  font-style: normal; */
+}
+
+p{
+  font-family: big-caslon-fb, serif;
+  font-weight: 800;
+  font-style: normal;
+  margin-left: 200px;
+  margin-right:200px;
+  margin-top: 200px;
+  font-size: 100pt;
+  color: #e54225;
+  line-height: 0.5em;
+  text-align: justify;
+}
+
 .navbar{
   margin-top: 22px;
   /* display: inline-block; */
