--- a/Portfolio-Work.css
+++ b/Portfolio-Work.css
@@ -28,8 +28,8 @@ li {
   text-align: center;
   font-family: sofia-pro, sans-serif;
   font-weight: 300;
-  font-size: 15pt;
-  letter-spacing: 0.1em;
+  font-size: 12pt;
+  letter-spacing: 0.2em;
   list-style-type: none;
   margin: auto 120px;
   text-decoration: none;
@@ -38,4 +38,19 @@ li {
 .navitem:hover{
   color: #E54225;
   font-style: italic;
+}
+
+.masonry { /* Masonry container */
+  column-count: 3;
+  column-gap: 2em;
+  margin-left: 185px;
+  margin-right: 185px;
+  margin-top: 100px;
+}
+
+.item { /* Masonry bricks or child elements */
+  background-color: #eee;
+  display: inline-block;
+  margin: 0 0 2em;
+  width: 100%;
 }
