--- a/Portfolio-Me.css
+++ b/Portfolio-Me.css
@@ -13,8 +13,8 @@ body{
   font-weight: 300;
   letter-spacing: 0.2em;
   color: #f2f2f2;
-  /* font-family: 'AvenirLTPro-Light', sans-serif; */
-  font-family: sofia-pro, sans-serif;
+  font-family: 'AvenirLTPro-Light', sans-serif;
+  /* font-family: sofia-pro, sans-serif; */
   /* font-weight: normal;
   font-style: normal;
   font-style: normal; */
