--- a/Portfolio-home.css
+++ b/Portfolio-home.css
@@ -66,3 +66,40 @@ li {
   color: #E54225;
   font-style: italic;
 }
+
+@media screen and (max-width: 1180px) {
+  .nav{
+    margin: auto;
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+  }
+
+  .navitem{
+    color: #191919;
+    text-align: center;
+    font-family: sofia-pro, sans-serif;
+    font-weight: 300;
+    font-size: 12pt;
+    list-style-type: none;
+    margin: auto 50px;
+    text-decoration: none;
+  }
+
+    #isabelle{
+      text-align: center;
+      margin-top: 50px;
+      margin-left: 0%
+      margin-bottom: 0px;
+      padding: 0px;
+    }
+
+    #rieken{
+      text-align: center;
+      margin-right: 0%
+      margin-top: 0px;
+      padding: 0px;
+    }
+
+
+}
