--- a/Portfolio-home.css
+++ b/Portfolio-home.css
@@ -100,6 +100,10 @@ li {
       margin-top: 0px;
       padding: 0px;
     }
+}
 
-
+@media screen and (max-width: 1000px) {
+  h1{
+    font-size:150pt;
+  }
 }
