--- a/featurepage.css
+++ b/featurepage.css
@@ -145,3 +145,14 @@ a:hover{
     font-size: 10pt;
   }
 }
+
+@media screen and (max-width: 480px) {
+
+  h1{
+    font-size:50pt;
+  }
+  .navitem{
+    font-size: 9pt;
+    margin: auto 0px;
+  }
+}
