--- a/workpage.css
+++ b/workpage.css
@@ -118,5 +118,16 @@ p{
     margin: auto 40px;
     text-decoration: none;
   }
-  
+
+}
+
+@media screen and (max-width: 480px) {
+
+  h1{
+    font-size:50pt;
+  }
+  .navitem{
+    font-size: 9pt;
+    margin: auto 0px;
+  }
 }
