--- a/Portfolio-features.css
+++ b/Portfolio-features.css
@@ -122,3 +122,14 @@ a:hover{
     display: none;
   }
 }
+
+@media screen and (max-width: 480px) {
+
+  h1{
+    font-size:50pt;
+  }
+  .navitem{
+    font-size: 9pt;
+    margin: auto 0px;
+  }
+}
