--- a/Portfolio-home.css
+++ b/Portfolio-home.css
@@ -109,7 +109,12 @@ li {
 }
 
 @media screen and (max-width: 480px) {
+
   h1{
     font-size:50pt;
+  }
+  .navitem{
+    font-size: 9pt;
+    margin: auto 0px;
   }
 }
